I added a Scale property to the ProgressBar component.

--- a/ProgressBar.razor
+++ b/ProgressBar.razor
@@ -4,7 +4,7 @@
     background-image: url('_content/DataJuggler.Blazor.Components/Images/RedProgressBase.png');
     width: 644px;
     height: 132px;
-    transform: scale(0.5);
+    transform: scale(@Scale);
     transform-origin: left;   
     border: 2px solid black;
     display: @Display;
