I updated the color on the TextSample to midnight blue.

--- a/Samples/BlazorProgressSample/Pages/Index.razor
+++ b/Samples/BlazorProgressSample/Pages/Index.razor
@@ -6,6 +6,7 @@
     font-family: Verdana;
     font-size: @FontSizePixels;
     margin-top: -64px;
+    color: midnightblue;
 </Styled>
 <Styled @bind-Classname="@AnimationStyle">
    background-image: url('../images/RaceTrack.png');
@@ -31,7 +32,7 @@
 </div>
 <div class="height120">
     <div class="@TextSize">
-        <h4>Font Size Sample</h4>
+        <h4 class="colorblack">Font Size Sample</h4>
         BlazorStyled Is Awesome! Adjust CSS With C#<br />
         <button class="buttonwide" @onclick="MakeTextBigger">Make Text Bigger</button>
         <button class="buttonwide moveleft80" @onclick="MakeTextSmaller">Make Text Smaller</button>
