Checking in with the latest changes, released as version 1.0.7 on Nuget.

--- a/Samples/BlazorProgressSample/Pages/Index.razor
+++ b/Samples/BlazorProgressSample/Pages/Index.razor
@@ -61,14 +61,14 @@
         @if  (RedWins)
         {
             <Sprite ImageUrl="../images/CheckeredFlag.png" Name="CheckeredFlag" Position="fixed"
-            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition YPosition="@RedFlagY"
-            Scale="1"></Sprite>
+            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition 
+            YPosition="@RedFlagY" Scale="1"></Sprite>
         }
         else if (WhiteWins)
         {
             <Sprite ImageUrl="../images/CheckeredFlag.png" Name="CheckeredFlag" Position="fixed"
-            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition YPosition="@WhiteFlagY"
-            Scale="1"></Sprite>
+            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition 
+            YPosition="@WhiteFlagY" Scale="1"></Sprite>
         }
     </div>
 }
