--- a/Samples/BlazorProgressSample/wwwroot/css/site.css
+++ b/Samples/BlazorProgressSample/wwwroot/css/site.css
@@ -27,6 +27,11 @@
     position: relative;
     top: 2px;
 }
+.movedown3
+{
+    position: relative;
+    top: 3px;
+}
 .movedown8
 {
     position: relative;
