--- a/Samples/BlazorProgressSample/Pages/Index.razor
+++ b/Samples/BlazorProgressSample/Pages/Index.razor
@@ -24,20 +24,22 @@
     <button class="button" @onclick="ShowProgressSimulation">Start</button>
     <button class="button moveleft48" @onclick="StopProgressSimulation">Stop</button>
     <span class="fontsample moveleft80">Show Background</span>
-    <input class="moveleft80 movedown2" type="checkbox" checked="checked" @bind-value="@ShowBackground" />
+    <input class="moveleft80 movedown3" type="checkbox" checked="checked" @bind-value="@ShowBackground" />
     <span class="fontsample moveleft72">Background Scale</span>
     <input type="text" @bind="@BackgroundScale" class="maxwidth40 moveleft72" />
     <span class="fontsample moveleft60">Bubble Scale</span>
     <input type="text" @bind="@BubbleScale" class="maxwidth40 moveleft60" />
+    <span class="fontsample moveleft48">Squares</span>
+    <input type="checkbox" @bind="@UseSquares" class="moveleft48 movedown3" />
 </div>
 <div>
     <span class="small">(Run Without Debugging)</span>
 </div>
 <div class="height200 movedown16">
-    <ProgressBar ShowBackground="@ShowBackground" Subscriber=this Increment="40" Interval="500"
+    <ProgressBar ShowBackground="@ShowBackground" BackgroundImageUrl="" 
+        Subscriber=this Increment="40" Interval="500" BackgroundColor="#02075d"
         BackgroundScale="@BackgroundScale" BubbleScale="@BubbleScale" BackgroundWidth="272" 
-        BackgroundHeight="60" BubbleOffSet="16"
-        Theme="DataJuggler.Blazor.Components.Enumerations.ThemeEnum.Spheres">
+        BackgroundHeight="60" BubbleOffSet="16" Theme="@ProgressTheme">
     </ProgressBar>
 </div>
 <div class="height120">
