Checking in with the code / content for version 1.3.3, which has been released to Nuget.
This version includes the new ProgressBar that uses all CSS.

--- a/ProgressBar.razor
+++ b/ProgressBar.razor
@@ -1,40 +1,17 @@
 ﻿@using BlazorStyled
 
-<Styled @bind-Classname="@ProgressBackground">
-    background-image: url('@BackgroundImageUrl');
-    background-color: @BackgroundColor;
-    width: @BackgroundWidthPixels;
-    height: @BackgroundHeightPixels;
-    transform: scale(@BackgroundScale);
-    transform-origin: left;   
-    border: 2px solid black;
-    display: @Display;
-    z-index: 1;    
-</Styled>
-<Styled @bind-Classname="@BubbleStyle">
-    background-image: url('@BubbleImageUrl');
-    width: 48px;
-    height: 48px;    
-    background-repeat: no-repeat;
-    transform: scale(@BubbleScale);
-    transform-origin: left;   
-    z-index: 10;
-    position:@BubblePosition;
-    left: @BubbleLeftPixels;
-    top: @BubbleTopPixels;
-</Styled>
+<Styled @bind-Classname="@TextColorStyle">
+    color: @TextColor;
+</Styled> 
 
 @if  (Visible)
-{
-    @if (ShowBackground)
-    {
-        <div class="@ProgressBackground">
-            <div class="@BubbleStyle"></div>
+{  
+    <div class=@ProgressStyle>
+        <span class="@TextColorStyle">@PercentString</span>
+        <div class="slice">
+            <div class="bar"></div>
+            <div class="fill"></div>
         </div>
-    }
-    else
-    {
-        <div class="@BubbleStyle"></div>
-    }
+    </div>
 }
 
