--- a/Samples/BlazorProgressSample/Pages/Index.razor
+++ b/Samples/BlazorProgressSample/Pages/Index.razor
@@ -2,91 +2,20 @@
 @using BlazorStyled
 @using DataJuggler.Blazor.Components
 @using DataJuggler.Blazor.Components.Interfaces
+@using DataJuggler.Blazor.Components.Enumerations;
 
-<Styled @bind-Classname="@TextSize">
-    font-family: Verdana;
-    font-size: @FontSizePixels;
-    margin-top: -64px;
-    color: midnightblue;
-</Styled>
-<Styled @bind-Classname="@AnimationStyle">
-   background-image: url('../images/RaceTrack.png');
-   width: 1280px;
-   height: 300px;
-   overflow: hidden;
-   transform: scale(0.5);
-   transform-origin: left;   
-   position: relative;
-   top: -64px;
-</Styled>
+<div class="height200">
+    <h2>Small Progress Sample</h2>
 
-<div>
-    <button class="button" @onclick="ShowProgressSimulation">Start</button>
-    <button class="button moveleft48" @onclick="StopProgressSimulation">Stop</button>
-    <span class="fontsample moveleft80">Show Background</span>
-    <input class="moveleft80 movedown3" type="checkbox" checked="checked" @bind-value="@ShowBackground" />
-    <span class="fontsample moveleft72">Background Scale</span>
-    <input type="text" @bind="@BackgroundScale" class="maxwidth40 moveleft72" />
-    <span class="fontsample moveleft60">Bubble Scale</span>
-    <input type="text" @bind="@BubbleScale" class="maxwidth40 moveleft60" />
-    <span class="fontsample moveleft48">Squares</span>
-    <input type="checkbox" @bind="@UseSquares" class="moveleft48 movedown3" />
-</div>
-<div>
-    <span class="small">(Run Without Debugging)</span>
-</div>
-<div class="height200 movedown16">
-    <ProgressBar ShowBackground="@ShowBackground" BackgroundImageUrl="" 
-        Subscriber=this Increment="40" Interval="500" BackgroundColor="#02075d"
-        BackgroundScale="@BackgroundScale" BubbleScale="@BubbleScale" BackgroundWidth="272" 
-        BackgroundHeight="60" BubbleOffSet="16" Theme="@ProgressTheme">
-    </ProgressBar>
-</div>
-<div class="height120">
-    <div class="@TextSize">
-        <h4 class="colorblack">Font Size Sample</h4>
-        BlazorStyled Is Awesome! Adjust CSS With C#<br />
-        <button class="buttonwide" @onclick="MakeTextBigger">Make Text Bigger</button>
-        <button class="buttonwide moveleft80" @onclick="MakeTextSmaller">Make Text Smaller</button>
+    <button class="blackbutton" @onclick="StartProgress">Start</button>
+
+    <div class="progresscontainer">
+        <ProgressBar Increment="2" Interval="25" Visible="@ShowProgress"
+            Theme=ThemeEnum.Dark ClientHandledIncrement="false" Size=SizeEnum.Small
+            OverrideThemeColorForText="true" Scale="1" Subscriber=this TextColor="white"
+            Color=ColorEnum.Orange CloseAtExtraPercent="12">
+        </ProgressBar>
     </div>
 </div>
-
-<div class="height160">
-<h4>Animation Sample</h4>
-<button class="buttonwide" @onclick="ShowRace">Show Race</button>
-
-@if  (ShowTrack)
-{
-    <button class="buttonwide moveleft80" @onclick="StartRace">Start Race</button>
-    <button class="buttonwide moveleft160" @onclick="HideRace">Hide Race</button>
-    @if (RaceOver)
-    {
-        <button class="buttonwide moveleft240" @onclick="RaceAgain">Race Again</button>
-    }
-    <div class="@AnimationStyle">
-        <Sprite ImageUrl="../images/RedCar.png" Name="RedCar" Position="fixed" 
-        Height="30" Subscriber=this Width="96" ZIndex="10" XPosition="@RedCarPosition" YPosition="@RedCarY"
-        Scale="1.4" Interval="50"></Sprite>        
-        <Sprite ImageUrl="../images/WhiteCar.png" Name="WhiteCar" Position="fixed"
-        Height="30" Subscriber=this Width="96" ZIndex="10" XPosition="@WhiteCarPosition" YPosition="@WhiteCarY"
-        Scale="1.4"></Sprite>
-        @if  (RedWins)
-        {
-            <Sprite ImageUrl="../images/CheckeredFlag.png" Name="CheckeredFlag" Position="fixed"
-            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition 
-            YPosition="@RedFlagY" Scale="1"></Sprite>
-        }
-        else if (WhiteWins)
-        {
-            <Sprite ImageUrl="../images/CheckeredFlag.png" Name="CheckeredFlag" Position="fixed"
-            Height="128" Width="128" Visible="true" ZIndex="20" XPosition=@FlagPosition 
-            YPosition="@WhiteFlagY" Scale="1"></Sprite>
-        }
-    </div>
-}
-</div>
-
-
-
 
 
