--- a/Samples/BlazorProgressSample/Pages/_Host.cshtml
+++ b/Samples/BlazorProgressSample/Pages/_Host.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="~/_content/DataJuggler.Blazor.Components/css/site.css" rel="stylesheet" />
-    @(await Html.RenderComponentAsync<BlazorStyled.ServerSideStyled>(RenderMode.ServerPrerendered))
+    <link href="~/_content/DataJuggler.Blazor.Components/css/circle.css" rel="stylesheet" />
 </head>
 <body>
     <app>
