I am checking in with the changes for version 1.4.4, which includes a new Opacity Parameter property. I am still working on a Chat sample, which is almost done.

--- a/Sprite.razor
+++ b/Sprite.razor
@@ -10,6 +10,7 @@
     transform: scale(@Scale);
     transform-origin: left;
     display: @Display;
+    opacity: @Opacity;
 </Styled>
 
 <div class="@SpriteStyle">
