--- a/Sprite.razor
+++ b/Sprite.razor
@@ -5,8 +5,8 @@
     width: @WidthPixels;
     height: @HeightPixels;
     position: @Position;
-    top: @YPositionPixels;
-    left: @XPositionPixels;
+    top: @YPositionStyle;
+    left: @XPositionStyle;
     transform: scale(@Scale);
     transform-origin: left;
     display: @Display;
