Updated a property on the Sprite component to change how Height and Width are set.

--- a/Sprite.razor
+++ b/Sprite.razor
@@ -2,8 +2,8 @@
 
 <Styled @bind-Classname="@SpriteStyle">
     background-image: url('@ImageUrl');
-    width: @WidthPixels;
-    height: @HeightPixels;
+    width: @WidthStyle;
+    height: @HeightStyle;
     position: @Position;
     top: @YPositionStyle;
     left: @XPositionStyle;
