--- a/Samples/BlazorChat/Components/SpeechBubble.razor
+++ b/Samples/BlazorChat/Components/SpeechBubble.razor
@@ -1,5 +1,26 @@
 ﻿@using DataJuggler.Blazor.Components
+@using BlazorStyled
 
-<Sprite Subscriber="this" Opacity="@Opacity" Position="fixed"
-        XPosition="@XPosition" YPosition="@YPosition">
-</Sprite>
+
+<Styled @bind-Classname="@TextStyle">
+    font-family: Verdana, Arial;    
+    color: limegreen;
+    line-height: 2.4vh;
+    vertical-align: central;
+    font-size: 2.0vh;
+    color: limegreen;
+    position: fixed;
+    left: @TextLeftStyle;
+    top: @TextTopStyle;
+    width: 16%;
+    height: 16vh;
+    opacity: @Opacity;
+</Styled>
+
+<div class="@TextStyle">
+    @Text
+    <Sprite Subscriber="this" Opacity="@Opacity" Position="fixed"
+            XPosition="@XPosition" YPosition="@YPosition" Height="12" Width="12"
+            ImageUrl="@ImageUrl" Interval="100">
+    </Sprite>
+</div>
