Still a work in progress, but I have the chat part working. I am going to kill the bubbles after lunch, or get a better one.

--- a/Samples/BlazorChat/Components/Chat.razor
+++ b/Samples/BlazorChat/Components/Chat.razor
@@ -10,9 +10,10 @@
         <div class="chatroom2">
             @if (ListHelper.HasOneOrMoreItems(Messages))
             {
-                foreach (SubscriberMessage message in messages)
+                foreach (SubscriberMessage message in Messages)
                 {
-                    <SpeechBubble Parent="this" Message="message">
+                    <SpeechBubble Parent="this" Message=message>
+
                     </SpeechBubble>
                 }
             }
