Checking in the first version that works. Trying to decide how to polish before release.

--- a/Samples/BlazorChat/Components/Chat.razor
+++ b/Samples/BlazorChat/Components/Chat.razor
@@ -12,8 +12,7 @@
             {
                 foreach (SubscriberMessage message in Messages)
                 {
-                    <SpeechBubble Parent="this" Message=message>
-
+                    <SpeechBubble Message=message>
                     </SpeechBubble>
                 }
             }
