--- a/Samples/BlazorChat/Components/SpeechBubble.razor
+++ b/Samples/BlazorChat/Components/SpeechBubble.razor
@@ -2,27 +2,46 @@
 @using BlazorStyled
 
 <Styled @bind-Classname="@BubbleStyle">
-    background-image: url('../Images/Bubbles/SpeechBubbleBlue.png');
+    background-image: url('@ImageUrl');
+    background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
     left: 0%;
     top: 0vh;
-    width: 32%;
-    height: 10vh;
+    width: 84%;
+    height: auto;
+    margin-bottom: 1.2vh;
 </Styled>
 <Styled @bind-Classname="@TextStyle">
     font-family: Verdana, Arial;    
-    line-height: 2.4vh;
+    line-height: 1.8vh;
     vertical-align: central;
-    font-size: 2.0vh;
+    font-size: 1.8vh;
+    color: white;
+    position: relative;
+    left: 4%;
+    top: -1vh;
+    max-width: 84%;
+    width: 84%;
+    height: auto;
+    margin-left: 2%;
+    margin-top: 2%;
+    text-align: left;
+</Styled>
+<Styled @bind-Classname="@MessageHeader">
+    font-family: Verdana, Arial;
+    text-align: left;
+    line-height: 2vh;
+    font-size: 2vh;
     color: limegreen;
     position: relative;
-    left: 6%;
-    top: 2.5vh;
-    width: 16%;
-    height: auto;
+    left: @LeftStyle;
+    top: 0vh;
 </Styled>
 
 <div class="@BubbleStyle">
-    <span class="@TextStyle">@Text</span>
+    <div class="@MessageHeader">@From</div>
+    <div class="@TextStyle">
+        <span>@Text</span>
+    </div>
 </div>
