--- a/Samples/BlazorChat/Pages/_Host.cshtml
+++ b/Samples/BlazorChat/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <link href="~/_content/DataJuggler.Blazor.Components/css/site.css" rel="stylesheet" />
     <link href="~/_content/DataJuggler.Blazor.Components/css/circle.css" rel="stylesheet" />
     <link href="~/_content/DataJuggler.Blazor.Components/css/DataJuggler.Blazor.Components.css" rel="stylesheet" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
     <app>
