Checking in with a version that is near ready. Everything works, the only few things left to do are polish the Chat windows, and the Connect screen just has a Green window as a place holder. That is next.

--- a/Samples/BlazorChat/Components/Chat.razor
+++ b/Samples/BlazorChat/Components/Chat.razor
@@ -43,11 +43,8 @@
 }
 else
 {
-    <div>
-        Join as Guest<br />
-        <input type="text" @bind="Name" />
+    <div class="loginorjointochat">
     </div>
-    <button class="greenbutton7" @onclick="@JoinAsGuest">Join</button>
 }
 
 
