--- a/Samples/BlazorChat/Components/SpeechBubble.razor
+++ b/Samples/BlazorChat/Components/SpeechBubble.razor
@@ -17,7 +17,7 @@
     line-height: 1.8vh;
     vertical-align: central;
     font-size: 1.8vh;
-    color: white;
+    color: black;
     position: relative;
     left: 4%;
     top: -1vh;
