I changed the Connect screen to have a House Rules image.

--- a/Samples/BlazorChat/wwwroot/css/site.css
+++ b/Samples/BlazorChat/wwwroot/css/site.css
@@ -38,12 +38,13 @@
 }
 .chatroom
 {
+    background-image: url('../Images/HouseRules.png');
+    background-size: 100% 100%;
     position: fixed;
     top: 18vh;
-    left: 5%;
+    left: 12%;
     width: 76%;
     height: 64vh;
-    background-color: green;
 }
 .chatroom2
 {
