I now have links working if a user pastes in a link it turns it into an href

--- a/Samples/BlazorChat/Components/SpeechBubble.razor
+++ b/Samples/BlazorChat/Components/SpeechBubble.razor
@@ -50,6 +50,6 @@
         <div class="@MessageHeader">@From</div>
     }
     <div class="@TextStyle">
-        <span>@Text</span>
+        <span>@(((MarkupString)HtmlText).Sanitize())</span>
     </div>
 </div>
