--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -47,6 +47,7 @@
     margin-left: 2%;
     margin-bottom: 1vh;
     width: @WidthPercent;
+    height: @HeightPercent;
 </Styled>
 
 <div class="@ValidationControlStyle">
