I forgot to apply the TextBoxHeight to the CSS for the textarea.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -17,6 +17,7 @@
     position: relative;
     left: -6%;
     width: @TextBoxWidthPercent;
+    Height: @TextBoxHeightPercent;
 </Styled>
 <Styled @bind-Classname="@CheckBoxStyle">
     background-color: @TextBoxBackColor;
