I fixed a CSS (BlazorStyled) styling issue.

--- a/ValidationComponent.razor
+++ b/ValidationComponent.razor
@@ -8,7 +8,7 @@
     text-align: right !important;
     justify-content: right;
     position: relative;
-    top: 1vh;
+    top: .2vh;
     vertical-align: top;
     left: -6.4%;
 </Styled>
