Checking in for version 1.6.3, which now has Top and Left properties for the ValidationComponent.

--- a/ImageButton.razor
+++ b/ImageButton.razor
@@ -24,6 +24,7 @@
 </Styled>
 <Styled @bind-Classname="ButtonStyle" PseudoClass="PseudoClasses.Focus">
     outline: none;
+    border: none;
 </Styled>
 <Styled @bind-Classname="ButtonTextAlignStyle">
     text-align: @ButtonTextAlign;
